<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/nav_home" />
        <item
            android:id="@+id/nav_contacts"
            android:icon="@drawable/ic_person_black_24dp"
            android:title="@string/nav_contacts" />
        <item
            android:id="@+id/nav_communities"
            android:icon="@drawable/ic_group_black_24dp"
            android:title="@string/nav_communities" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/nav_settings" />

        <item
            android:id="@+id/nav_sign_out"
            android:icon="@drawable/ic_exit_to_app_black_24dp"
            android:title="@string/nav_sign_out" />
    </group>

</menu>