<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:myapp="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/action_add"
          android:icon="@android:drawable/ic_menu_add"
          myapp:showAsAction="always"
          android:title="@string/action_bar_add">
		<menu>
            <item android:id="@+id/action_add_contact"
                  android:icon="@drawable/ic_add_contact"
                  android:onClick="onAddContact"
                  android:title="@string/action_bar_add_contact" />
            <item android:id="@+id/action_tell_friends"
                  android:icon="@drawable/ic_tell_friend"
                  android:onClick="onTellFriend"
                  android:title="@string/action_bar_tell_friends" />
            <item android:id="@+id/action_refresh"
                android:icon="@drawable/ic_refresh"
                android:onClick="onRefresh"
                android:title="@string/action_refresh"/>
        </menu>
    </item>
</menu>
